--- a/src/app/views/checkout/payment-summary/payment-summary.component.html
+++ b/src/app/views/checkout/payment-summary/payment-summary.component.html
@@ -24,17 +24,17 @@
           <div class="row">
             <div class="col-xl-8">
               <ul class="list-unstyled">
-                <li class="text-muted">To: <span style="color:#5d9fc5 ;">John Lorem</span></li>
-                <li class="text-muted">Street, City</li>
-                <li class="text-muted">State, Country</li>
-                <li class="text-muted"><i class="fas fa-phone"></i> 123-456-789</li>
+                <li class="text-muted">To: <span style="color:#5d9fc5 ;">{{deliveryaddress.fname}} {{deliveryaddress.lname}}</span></li>
+                <li class="text-muted">{{deliveryaddress.address}}, {{deliveryaddress.city}}</li>
+                <!-- <li class="text-muted"></li> -->
+                <li class="text-muted"><i class="fas fa-phone"></i> {{deliveryaddress.mobileno}}</li>
               </ul>
             </div>
             <div class="col-xl-4">
               <p class="text-muted">Invoice</p>
               <ul class="list-unstyled">
                 <li class="text-muted"><i class="fas fa-circle" style="color:#84B0CA ;"></i> <span class="fw-bold">ID:</span>#123-456</li>
-                <li class="text-muted"><i class="fas fa-circle" style="color:#84B0CA ;"></i> <span class="fw-bold">Creation Date: </span>Jun 23,2021</li>
+                <!-- <li class="text-muted"><i class="fas fa-circle" style="color:#84B0CA ;"></i> <span class="fw-bold">Creation Date: </span></li> -->
                 <li class="text-muted"><i class="fas fa-circle" style="color:#84B0CA ;"></i> <span class="me-1 fw-bold">Status:</span><span class="badge bg-warning text-black fw-bold"> Unpaid</span></li>
               </ul>
             </div>
