--- a/src/app/views/dashboards/common/categories/categories.component.html
+++ b/src/app/views/dashboards/common/categories/categories.component.html
@@ -41,7 +41,7 @@
     <!-- Grid row -->
     <div class="row">
   
-        <div class="container p-0 d-flex flex-wrap" *ngIf="changeviewFlag == false">
+        <div class="container p-0 d-flex flex-wrap" *ngIf="changeviewFlag == false && restorantList.length != 0">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 card_parent row-col-eq ng-tns-c21-2 ng-star-inserted mb-4 mb-lg-0 pb-3"
                *ngFor="let restro of restorantList;" >
                 <div class="card card_hover" (click)="sendRestarunt(restro)" mdbWavesEffect routerLink="../outlets-details/outlets">
@@ -237,6 +237,10 @@
                     </div>
                 </div>
             </div> -->
+        </div>
+        <div class="container p-0 d-flex flex-wrap" *ngIf="changeviewFlag == false && restorantList.length == 0">
+            <h1>Restaurant not available</h1>
+
         </div>
         <div class="container p-0 d-flex flex-wrap" *ngIf="changeviewFlag == true">
             <app-map1></app-map1>
