--- a/src/app/main-layout/footer/footer.component.html
+++ b/src/app/main-layout/footer/footer.component.html
@@ -12,34 +12,34 @@
 
         <ul class="list-unstyled">
           <li>
-            <a href="https://foodbahok.com/pages/centre" target="_blank">Restaurant Sign Up</a>
+            <a href="https://foodbahokbd.com/pages/centre" target="_blank">Restaurant Sign Up</a>
           </li>
           <li>
-            <a href="https://foodbahok.com/pages/centre" target="_blank">Delivery with Food Bahok</a>
+            <a href="https://foodbahokbd.com/pages/centre" target="_blank">Delivery with Food Bahok</a>
           </li>
           <li>
-            <a href="https://foodbahok.com/pages/career" target="_blank">Careers</a>
+            <a href="https://foodbahokbd.com/pages/career" target="_blank">Careers</a>
           </li>
           <li>
-            <a href="https://foodbahok.com/pages/about" target="_blank">About Us</a>
+            <a href="https://foodbahokbd.com/pages/about" target="_blank">About Us</a>
           </li>
           <li>
-            <a href="https://foodbahok.com/pages/privacy" target="_blank">Privacy Policy</a>
+            <a href="https://foodbahokbd.com/pages/privacy" target="_blank">Privacy Policy</a>
           </li>
           <li>
-            <a href="https://foodbahok.com/pages/terms_and_condition" target="_blank">Terms & Conditions</a>
+            <a href="https://foodbahokbd.com/pages/terms_and_condition" target="_blank">Terms & Conditions</a>
           </li>
           <li>
-            <a href="https://foodbahok.com/pages/cookie" target="_blank">Cookie Policy</a>
+            <a href="https://foodbahokbd.com/pages/cookie" target="_blank">Cookie Policy</a>
           </li>
           <li>
-            <a href="https://foodbahok.com/" target="_blank">Modern Slavery Statement</a>
+            <a href="https://foodbahokbd.com/" target="_blank">Modern Slavery Statement</a>
           </li>
           <li>
-            <a href="https://foodbahok.com" target="_blank">Sustainability</a>
+            <a href="https://foodbahokbd.com" target="_blank">Sustainability</a>
           </li>
           <li>
-            <a href="https://foodbahok.com/pages/refunds" target="_blank">Refund Policy</a>
+            <a href="https://foodbahokbd.com/pages/refunds" target="_blank">Refund Policy</a>
           </li>
         </ul>
       </div>
