--- a/src/app/main-layout/navigation/navigation.component.html
+++ b/src/app/main-layout/navigation/navigation.component.html
@@ -81,9 +81,9 @@
         <!-- <li class="nav-item active">
           <a class="nav-link waves-light"  mdbWavesEffect>Partner with us</a>
         </li> -->
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link waves-light" mdbWavesEffect><mdb-icon fas icon="search"></mdb-icon> Search</a>
-        </li>
+        </li> -->
   
         <!-- Dropdown -->
         <li class="nav-item" *ngIf="!userobj">
