--- a/src/app/views/outlets-details/outlets-details/outlets-details.component.html
+++ b/src/app/views/outlets-details/outlets-details/outlets-details.component.html
@@ -71,7 +71,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4 m-auto d-flex">
+        <div class="col-md-3 m-auto d-flex" style="top: 6px;">
             <!-- <div class="input-group mb-3 _filter">
                 <input type="text" class="form-control" placeholder="Search Menu" [(ngModel)]="searchvalue" (keyup)="searchMenu($event)" aria-label="Username" aria-describedby="basic-addon1">
                 <div class="input-group-prepend">
@@ -91,13 +91,12 @@
                   <span class="input-group-text md-addon" id="basic-addon1"><mdb-icon fas icon="search" aria-hidden="true"></mdb-icon></span>
                 </div>
               </div>
-              <div class="_search input-group mb-0" style="width: 42%;">
+              <!-- <div class="_search input-group mb-0" style="width: 42%;">
                 <input class="form-check-input" style="margin: 10px;border: none;" type="checkbox" id="Vegetarian" name="Vegetarian" value="Vegetarian" (click)="FoodTypecheck()">
                 <div class="" style="margin-top: 5px;margin-left: 35px;">
                     <span class="" id="basic-addon1">Veg Only</span>
-                    <!-- <label for="Vegetarian">Vegetarian</label> -->
                   </div>
-              </div>
+              </div> -->
         </div>
     </div>
 </div>
