--- a/src/app/views/outlets-details/common/products/products.component.html
+++ b/src/app/views/outlets-details/common/products/products.component.html
@@ -3,9 +3,9 @@
 
 <!-- Small news -->
 <div class="single-news" *ngIf="productsList" >
-
+  <ul id="myUL1">
     <!-- Grid row -->
-    <div class="row" *ngFor="let products of productsList;let cardIndex = index">
+    <li class="row" *ngFor="let products of productsList;let cardIndex = index">
 
       <!-- Grid column -->
       <div class="col-md-3 col-4 p-0-8 mb-2"  *ngIf="products.menu_categoryid == menuid">
@@ -25,9 +25,8 @@
 
       </div>
       <!-- Grid column -->
-
       <!-- Grid column -->
-      <div class="col-md-9 col-8" *ngIf="products.menu_categoryid == menuid">
+      <div class="col-md-9 col-8 productName" *ngIf="products.menu_categoryid == menuid">
         <!-- Excerpt -->
         <div class="font-weight-bold d-flex dark-grey-text cart-plus-minus">
             <div class="col-lg-11 col-10 text-truncate pl-0 mb-2">
@@ -57,13 +56,11 @@
             </a>
           </div>
         </div>
-
       </div>
       <!-- Grid column -->
-
-    </div>
+    </li>
     <!-- Grid row -->
-
+  </ul>
   </div>
   <!-- Small news -->
   <hr class="m-0">
