--- a/src/app/views/checkout/payment-summary/payment-summary.component.html
+++ b/src/app/views/checkout/payment-summary/payment-summary.component.html
@@ -3,7 +3,7 @@
       <div class="container mb-5 mt-3">
         <div class="row d-flex align-items-baseline" >
           <div class="col-xl-9">
-            <p style="color: #7e8d9f;font-size: 20px;">Invoice >> <strong>ID: #123-123</strong></p>
+            <!-- <p style="color: #7e8d9f;font-size: 20px;">Invoice >> <strong>ID: #123-123</strong></p> -->
           </div>
           <div class="col-xl-3 float-end">
             <a class="btn btn-light text-capitalize border-0" data-mdb-ripple-color="dark"><i class="fas fa-print text-primary"></i> Print</a>
@@ -30,14 +30,13 @@
                 <li class="text-muted"><i class="fas fa-phone"></i> {{deliveryaddress.mobileno}}</li>
               </ul>
             </div>
-            <div class="col-xl-4">
-              <p class="text-muted">Invoice</p>
-              <ul class="list-unstyled">
-                <li class="text-muted"><i class="fas fa-circle" style="color:#84B0CA ;"></i> <span class="fw-bold">ID:</span>#123-456</li>
-                <!-- <li class="text-muted"><i class="fas fa-circle" style="color:#84B0CA ;"></i> <span class="fw-bold">Creation Date: </span></li> -->
-                <li class="text-muted"><i class="fas fa-circle" style="color:#84B0CA ;"></i> <span class="me-1 fw-bold">Status:</span><span class="badge bg-warning text-black fw-bold"> Unpaid</span></li>
-              </ul>
-            </div>
+              <!-- <div class="col-xl-4">
+                <p class="text-muted">Invoice</p>
+                <ul class="list-unstyled">
+                  <li class="text-muted"><i class="fas fa-circle" style="color:#84B0CA ;"></i> <span class="fw-bold">ID:</span>#123-456</li>
+                  <li class="text-muted"><i class="fas fa-circle" style="color:#84B0CA ;"></i> <span class="me-1 fw-bold">Status:</span><span class="badge bg-warning text-black fw-bold"> Unpaid</span></li>
+                </ul>
+              </div> -->
           </div>
   
           <div class="row my-2 mx-1 justify-content-center">
@@ -69,11 +68,11 @@
   
             </div>
             <div class="col-xl-3">
-              <ul class="list-unstyled">
-                <li class="text-muted ms-3"><span class="text-black me-4">SubTotal</span>৳{{totalamount}}</li>
-                <li class="text-muted ms-3 mt-2"><span class="text-black me-4">Tax(15%)</span>৳111</li>
-                </ul>
-                <p class="text-black float-start"><span class="text-black me-3"> Total Amount</span><span style="font-size: 25px;">৳{{totalamount+111}}</span></p>
+              <!-- <ul class="list-unstyled"> -->
+                <!-- <li class="text-muted ms-3"><span class="text-black me-4">SubTotal</span>৳{{totalamount}}</li> -->
+                <!-- <li class="text-muted ms-3 mt-2"><span class="text-black me-4">Tax(15%)</span>৳111</li> -->
+                <!-- </ul> -->
+                <p class="text-black float-start"><span class="text-black me-3"> Total Amount</span><span style="font-size: 25px;">৳{{totalamount}}</span></p>
             </div>
           </div>
           <hr>
