--- a/src/app/views/checkout/common/address/addaddress/addaddress.component.html
+++ b/src/app/views/checkout/common/address/addaddress/addaddress.component.html
@@ -5,7 +5,7 @@
       <span aria-hidden="true">×</span>
     </button>
   </div>
-  <div class="modal-body mx-3" style="overflow: auto;height: 89vh;width: 94%;padding: 0;">
+  <div class="modal-body" style="overflow: auto;height: 89vh;width: 100%;">
     <!-- Extended material form grid -->
     <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
       <!-- Grid row -->
